--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "react": "^16.11.0",
     "react-datetime-picker": "^5.0.3",
     "react-dom": "^16.11.0",
